Implemented SendCommand function

--- a/Project/newproject.uvprojx
+++ b/Project/newproject.uvprojx
@@ -10,6 +10,7 @@
       <TargetName>Project</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
+      <pCCUsed>5060750::V5.06 update 6 (build 750)::ARMCC</pCCUsed>
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
@@ -480,6 +481,11 @@
               <FileName>includes.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\includes.h</FilePath>
+            </File>
+            <File>
+              <FileName>LCD.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\LCD.c</FilePath>
             </File>
           </Files>
         </Group>
